--- a/dest/index.html
+++ b/dest/index.html
@@ -4,16 +4,63 @@
   <head>
     <meta charset="utf-8"/>
     <mata name="description" content=""></mata>
+    <title>仮タイトル</title>
+    <link rel="stylesheet" href="css/destyle.css"/>
   </head>
   <body>
     <header>
-      <p>header</p>
+      <div class="container">
+        <div class="area_header_logo"><a class="logo" href="#"><img src="" alt=""/></a></div>
+        <nav class="nav_header">
+          <ul class="list_nav_header">
+            <li><a href="#">Profile.</a></li>
+            <li><a href="#">Skill.</a></li>
+            <li><a href="#">Hobby.</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
-      <p>main</p>
+      <section class="area_main_view">
+        <div class="container"><img src="" alt=""/>
+          <p class="name">Yuichi Kadota</p>
+          <p class="intro">Backend Engineer at MeadiaDo Co.Ltd</p>
+        </div>
+      </section>
+      <!-- プロフィール-->
+      <section class="area_main_profile">
+        <div class="container">
+          <div class="head_main">
+            <h2 class="ttl">Profile.</h2>
+          </div>
+        </div>
+      </section>
+      <!-- スキル-->
+      <section class="area_main_skill">
+        <div class="container">
+          <div class="head_main">
+            <h2 class="ttl">Skill.</h2>
+          </div>
+        </div>
+      </section>
+      <!-- 趣味など-->
+      <section class="area_main_hobby">
+        <div class="container">
+          <div class="head_main">
+            <h2 class="ttl">Hobby.</h2>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
-      <p>footer</p>
+      <div class="container">
+        <ul class="list_link">
+          <li class="github"><a href="#"></a></li>
+          <li class="twitter"><a href="#"></a></li>
+          <li class="hatena"><a href="#"></a></li>
+        </ul>
+        <p class="copyright">@2021 YuichiKadota</p>
+      </div>
     </footer>
   </body>
 </html>
