--- a/dest/index.html
+++ b/dest/index.html
@@ -6,6 +6,7 @@
     <mata name="description" content=""></mata>
     <title>仮タイトル</title>
     <link rel="stylesheet" href="css/destyle.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
     <header>
@@ -23,8 +24,8 @@
     <main>
       <section class="area_main_view">
         <div class="container"><img src="" alt=""/>
-          <p class="name">Yuichi Kadota</p>
-          <p class="intro">Backend Engineer at MeadiaDo Co.Ltd</p>
+          <p>Yuichi Kadota</p>
+          <p>Backend Engineer at MeadiaDo Co.Ltd</p>
         </div>
       </section>
       <!-- プロフィール-->
@@ -36,7 +37,7 @@
         </div>
       </section>
       <!-- スキル-->
-      <section class="area_main_skill">
+      <section class="area_main_skill bg_black">
         <div class="container">
           <div class="head_main">
             <h2 class="ttl">Skill.</h2>
