mod top view pad/img

--- a/dest/index.html
+++ b/dest/index.html
@@ -22,7 +22,7 @@
       </div>
     </header>
     <main>
-      <section class="area_main_view">
+      <section class="area_top_view">
         <div class="container"><img src="" alt=""/>
           <p>Yuichi Kadota</p>
           <p>Backend Engineer at MeadiaDo Co.Ltd</p>
